# FishEngine-Experiment

./: .gitignore  CMakeLists.txt  CodeGen.py  GenClassID.py  GenCreateObject.py  GenProperty.py  test.cpp
Assets/Shaders/: CascadedShadowMap.shader  CollectScreenSpaceShadow.shader  DisplayCSM.shader  DrawQuad.shader  PostProcessShadow.shader  RenderDepth.shader  SkyBox-Procedural.shader
Doc/: math.md
Include/FishEditor/: AssetDatabase.hpp  AssetImporter.hpp  DefaultImporter.hpp  EditorApplication.hpp  EditorSceneManager.hpp  EditorUtility.hpp  EditorWindow.hpp  FBXImporter.hpp  FileNode.hpp  FishEditor.hpp  FishEditorInternal.hpp  GameView.hpp  ModelImporter.hpp  Path.hpp  SceneView.hpp  Selection.hpp
Include/FishEditor/Serialization/: DefaultImporter.hpp  EditorSerialize.hpp  NativeFormatImporter.hpp  SceneImporter.hpp  YAMLArchive.hpp
Include/FishEditor/UI/: HierarchyView.hpp
Include/FishEngine/: Application.hpp  Archive.hpp  Asset.hpp  ClassID.hpp  CloneObject.hpp  Color.hpp  Component.hpp  CreateObject.hpp  Debug.hpp  FishEngine.hpp  FishEngine2.hpp  GameApp.hpp  GameObject.hpp  Gizmos.hpp  HideFlags.hpp  Object.hpp  Prefab.hpp  QualitySettings.hpp  RectTransform.hpp  Resources.hpp  Scene.hpp  Screen.hpp  Script.hpp  ScriptableObject.hpp  SimpleMesh.hpp  Transform.hpp
Include/FishEngine/Animation/: Animation.hpp  AnimationClip.hpp  AnimationClipInfo.hpp  AnimationCurve.hpp  AnimationCurveUtility.hpp  AnimationEvent.hpp  AnimationState.hpp  AnimationUtils.hpp  Animator.hpp  AnimatorClipInfo.hpp  AnimatorController.hpp  Avatar.hpp  HumanBodyBones.hpp  HumanDescription.hpp
Include/FishEngine/Component/: Behaviour.hpp  BoxCollider.hpp  Camera.hpp  Collider.hpp  Light.hpp  MeshFilter.hpp  MeshRenderer.hpp  Renderer.hpp  Rigidbody.hpp  SkinnedMeshRenderer.hpp  SphereCollider.hpp
Include/FishEngine/Internal/: SimpleLogger.hpp
Include/FishEngine/Math/: Bounds.hpp  Mathf.hpp  Matrix4x4.hpp  Matrix4x4.inl  Quaternion.inl  Rect.hpp  Vector2.hpp
Include/FishEngine/Physics/: Physics.hpp  PhysxAPI.hpp  RaycastHit.hpp
Include/FishEngine/Render/: BoneWeight.hpp  GLEnvironment.hpp  Graphics.hpp  Material.hpp  Mesh.hpp  Pipeline.hpp  RenderBuffer.hpp  RenderSettings.hpp  RenderTarget.hpp  RenderTexture.hpp  Shader.hpp  ShaderProperty.hpp  ShaderVariables.hpp  Texture.hpp  Texture2D.hpp  TextureProperty.hpp  TextureSampler.hpp
Include/FishEngine/Serialization/: Archive.hpp  CloneArchive.hpp  Serialize.hpp  UpdateValueArchive.hpp  YAMLArchive.cpp
Include/FishEngine/System/: AnimationSystem.hpp  InputSystem.hpp  PhysicsSystem.hpp  RenderSystem.hpp  ScriptSystem.hpp  UISystem.hpp
Include/FishEngine/Util/: StringFormat.hpp
Project/Unity/Assets/: Cube.prefab  Scene01.unity
Project/Unity/ProjectSettings/: ProjectSettings.asset
Script/: Cube.py  LogEulerAngles.py  Rotator.py  Rotator2.py  ShaderCompiler.py  Slot.py  app.py  demo1.py  demo2.py  demo3.py
Script/FishEditor/: AssetDataBase.py  AssetImporter.py  EditorApplication.py  EditorSceneManager.py  EditorUtility.py  FBXImporter.py  SceneDumper.py  SceneView.py  UnityImporter.py  UnityProjectImporter.py  YAMLUtils.py  __init__.py
Script/FishEngine/: Application.py  BoxCollider.py  Camera.py  Collider.py  Color.py  Component.py  Debug.py  GameObject.py  Gizmos.py  Graphics.py  Light.py  Material.py  Matrix4x4.py  Mesh.py  MeshFilter.py  MeshRenderer.py  Object.py  Physics.py  Prefab.py  Quaternion.py  Rect.py  RectTransform.py  Rigidbody.py  Scene.py  Screen.py  Script.py  Shader.py  SkinnedMeshRenderer.py  SphereCollider.py  System.py  Transform.py  TypeCheck.py  Vector2.py  Vector3.py  __init__.py  timing.py
Script/FishEngine/UI/: FontData.py  Text.py  __init__.py
Script/deprecated/FishEditor/: AssetDataBase.py  AssetImporter.py  ModelImporter.py  SceneDumper.py
Source/Editor/: GLWidget.cpp  GLWidget.hpp  HierarchyView.cpp  HierarchyView.hpp  HierarchyWidget.cpp  HierarchyWidget.hpp  InspectorView.cpp  InspectorView.hpp  InspectorWindow.cpp  InspectorWindow.hpp  ProjectView.cpp  ProjectView.hpp  SceneView.hpp  SceneViewApp.hpp  UnityLayout.hpp  UnityToolBar.cpp  UnityToolBar.hpp  main.cpp
Source/FishEditor/: AssetDatabase.cpp  AssetImporter.cpp  EditorApplication.cpp  EditorSceneManager.cpp  EditorWindow.cpp  FBXImporter.cpp  FileNode.cpp  FishEditor.cpp  FishEditorInternal.cpp  GameView.cpp  ModelImporter.cpp  Path.cpp  RawMesh.cpp  RawMesh.hpp  Selection.cpp
Source/FishEditor/Serialization/: DefaultImporter.cpp  EditorSerialize.cpp  NativeFormatImporter.cpp  YAMLArchive.cpp
Source/FishEditor/UI/: HierarchyView.cpp
Source/FishEngine/: Asset.cpp  ClassID.cpp  CloneObject.cpp  Component.cpp  FishEngine.cpp  FishEngineInternal.cpp  GameApp.cpp  GameObject.cpp  Gizmos.cpp  Object.cpp  Prefab.cpp  QualitySettings.cpp  RectTransform.cpp  Resources.cpp  Scene.cpp  Screen.cpp  Serialize.cpp  SimpleMesh.cpp  Transform.cpp
Source/FishEngine/Animation/: Animation.cpp  AnimationClip.cpp  AnimationUtils.cpp  Animator.cpp  AnimatorController.cpp  Avatar.cpp  HumanBodyBones.cpp
Source/FishEngine/Component/: BoxCollider.cpp  Camera.cpp  Collider.cpp  Light.cpp  MeshFilter.cpp  MeshRenderer.cpp  Rigidbody.cpp  Script.cpp  SkinnedMeshRenderer.cpp  SphereCollider.cpp
Source/FishEngine/Math/: Matrix4x4.cpp  Quaternion.cpp  Vector3.cpp
Source/FishEngine/Physics/: Physics.cpp
Source/FishEngine/Render/: BoneWeight.cpp  GLEnvironment.cpp  Graphics.cpp  Material.cpp  Mesh.cpp  Pipeline.cpp  RenderBuffer.cpp  RenderTarget.cpp  Shader.cpp  Texture.cpp  Texture2D.cpp  TextureProperty.cpp  TextureSampler.cpp
Source/FishEngine/Serialization/: CloneArchive.cpp  Serialize.cpp
Source/FishEngine/System/: AnimationSystem.cpp  InputSystem.cpp  PhysicsSystem.cpp  RenderSystem.cpp  ScriptSystem.cpp  UISystem.cpp
Test/: CMakeLists.txt
Test/Demo/: CMakeLists.txt
Test/ShaderCompiler/: CMakeLists.txt  main.cpp
Test/TestSerialization/: CMakeLists.txt  main.cpp
cmake/: FindDoubleConversion.cmake  FindFolly.cmake
