MACRO(SETUP_TEST EXE_NAME)
    # aux_source_directory(${CMAKE_CURRENT_LIST_DIR} SRCS)
    file(GLOB_RECURSE SRCS ./*.cpp ./*.hpp)
    add_executable (${EXE_NAME} ${SRCS})
    target_compile_options(${EXE_NAME} PUBLIC -std=c++14)

    target_link_libraries(${EXE_NAME} FishEngine)
    target_link_libraries(${EXE_NAME} FishEditor)
    target_link_libraries(${EXE_NAME} FishGUI)
    target_link_libraries(${EXE_NAME} nanovg)
    target_link_libraries(${EXE_NAME} glfw)
    target_link_libraries(${EXE_NAME} ${FBXSDK_LIB})
    target_link_libraries(${EXE_NAME} pybind11::embed)
    target_link_libraries(${EXE_NAME} ${FOLLY_LIBRARIES})
    target_link_libraries(${EXE_NAME} ${Boost_LIBRARIES})
    target_link_libraries(${EXE_NAME} ${PhysXSDK_LIBRARIES})
    target_link_libraries(${EXE_NAME} yaml-cpp)

    if (MSVC)
        # target_link_libraries(${EXE_NAME} opengl32.lib)
        target_link_libraries(${EXE_NAME} glew_s)
    else()
        set_target_properties(${EXE_NAME} PROPERTIES LINK_FLAGS "-framework OpenGL")
        # set_target_properties(${EXE_NAME} PROPERTIES LINK_FLAGS "-framework OpenGL -framework Cocoa -framework IOKit -framework CoreVideo")
    endif()

    SET_TARGET_PROPERTIES(${EXE_NAME} PROPERTIES FOLDER "Tests")
ENDMACRO(SETUP_TEST)

add_subdirectory(./Demo)
add_subdirectory(./TestSerialization)
add_subdirectory(./ShaderCompiler)